<resources>
    <string name="app_name">Trabajo Final</string>
    <string name="botonListar">Listar</string>
    <string name="botonAgregar">Agregar</string>
    <string name="Titulo">TiendaExpress</string>
    <string name="Bufeering">Buffering...</string>

    <string name="com_auth0_client_id">rB51ov3tEfqNdSSgjgiWbahyuTvjFfop</string>
    <string name="com_auth0_domain">dev-gd2cd3u4stlwlvkb.us.auth0.com</string>
    <string name="com_auth0_schema">tf</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="talle">Talle</string>
    <string name="nosotros">Nosotros</string>
    <string name="login">Login</string>
    <string name="text_descripcion">Somos Jorge, Gime y Diego, alumnos de la Tecnicatura Superior en Desarrollo Web y Aplicaciones Móviles, y decidimos crear TiendaExpress para poder brindarte una experiencia única y satisfactoria al momento de comprar ropa en Cordoba Capital, sin importar tu talla o forma corporal. En ella nos especializamos en proporcionar información detallada y actualizada sobre las mejores tiendas de ropa que ofrecen tallas especiales y podras realizar la compra sin moverte de tu casa. ¿En que nos diferenciamos? No solo recopilamos información sobre las mejores tiendas, precios y marcas que ofrecen tallas especiales, sino que también te proporcionamos reseñas honestas, recomendaciones de estilismo y consejos prácticos. Queremos que te sientas comodo/a y seguro/a al momento de elegir tu ropa, y creemos que la información es la clave para lograrlo. Explora nuestra aplicacion 100% intuitiva, para descubrir una amplia gama de tiendas de renombre en nuestra ciudad, que se especializan en tallas especiales. Te ofrecemos detalles sobre sus colecciones, opciones de tallas, políticas de devolución y mucha más informacion que te ayudara a realizar tu mejor compra. Además, mantenemos nuestra plataforma actualizada regularmente para asegurarnos de que siempre tengas acceso a la información más reciente y relevante. En TiendaExpress valoramos la diversidad y la inclusión, siempre en busqueda de fomentar la aceptación de todas las formas y tallas corporales, promoviendo una mentalidad positiva y saludable dentro de la industria de la moda.</string>
    <string name="footer">¡Explora, elegi y sentite espectacular con tu compra gracias a TiendaExpress!</string>
    <string name="logout">Logout</string>
    <string name="agregar_productos">Agregar Productos</string>
    <string name="modificar_productos">Modificar Productos</string>
    <string name="eliminar_productos">Eliminar Productos</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>
    <string name="noexistencia">No existen Productos a mostrar</string>
    <string name="productos_faltantes">Productos Faltantes</string>
    <string name="lista_de_productos">Lista de Productos</string>
    <string name="lista_de_productos_faltantes">Lista de Productos Faltantes</string>

</resources>