<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/listPreferredItemHeight"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:text="@string/nombre"
        android:textAppearance="?attr/textAppearanceListItem"
        />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvNombre"
        android:layout_below="@+id/tvNombre"
        android:text="@string/descripcion"
         />

    <TextView
        android:id="@+id/tvtalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvNombre"
        android:layout_below="@+id/tvDescripcion"
        android:text="@string/talle"
        />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="2dp"
        android:height="3dp"
        android:backgroundTint="@color/rojo"
        android:text="@string/eliminar"
        android:textSize="8sp" />

    <Button
        android:id="@+id/btnModificar"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_below="@+id/btnEliminar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="2dp"
        android:height="3dp"
        android:backgroundTint="@color/verde"
        android:text="@string/modificar"
        android:textSize="8sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="58dp"
        android:src="@drawable/producto"
        />


</RelativeLayout>